REGRESSION(r240174): Wrong preprocessor guards in RenderImage::paintAreaElementFocusRing https://bugs.webkit.org/show_bug.cgi?id=193630

Reviewed by Daniel Bates.

r240174 inadvertently disabled this function on non-Apple platforms.

This fixes layout test fast/images/image-map-outline-in-positioned-container.html.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintAreaElementFocusRing):


Canonical link: https://commits.webkit.org/208143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240221 268f45cc-cd09-0410-ab3c-d52691b4dbfc